k8s/02-networking/03-ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: rag-pdf
  labels:
    app.kubernetes.io/name: ollama
    app.kubernetes.io/component: llm
    app.kubernetes.io/part: "02-networking"
spec:
  # Internal LLM inference endpoint: http://ollama:11434
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ollama
  ports:
    - name: http
      port: 11434
      targetPort: 11434
      protocol: TCP
